fixed overlapping menu

--- a/src/components/browse-videos/BrowseVideos.css
+++ b/src/components/browse-videos/BrowseVideos.css
@@ -17,3 +17,8 @@
     height: 25px !important;
   }
 
+.MuiButtonBase-root {
+    margin-top: 3px !important;
+    margin-bottom: 0px !important;
+}
+
